HEADER: Fixed collapsed navbar and made responsive adjustments. FOOTER: Adjusted nav, social media, text areas.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,39 +2,65 @@
 $dk-blue: navy;
 $lt-blue: skyblue;
 
-.bg-lt-blue {
-  background-color: $lt-blue;
+// BOOTSTRAP DEFAULT OVERRIDES
+.bg-info {
+  // overrride with custom color
+  // background-color: $lt-blue;
 }
-//
+
+// UTILITY CLASSES
+.full-width {
+  width: 100%;
+}
+
+.ul-inline{
+  list-style-type: none;
+  li {
+    display: inline-block;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+.divide-bar li + li:before{
+  content: '| '
+}
+
+// CUSTOM
 .navbar-default .navbar-nav > li > a {
   color: $lt-blue;
   position: relative;
   &:hover {
     color: $dk-blue;
   }
-  // TRIANGLE TICK FOR ACTIVE LINKS
-  // &:hover:after {
-  //   position: absolute;
-  //   content: '';
-  //   width:0;
-  //   height:0;
-  //   width: 0;
-  //   border-style: solid;
-  //   border-width: 6px 6px 0 6px;
-  //   border-color: $dk-blue transparent transparent transparent;
-  //   bottom: 10px;
-  //   left: 46%;
-  // }
 }
 
-header {
+.navbar .nav > li > a:focus,
+.navbar .nav > li > a:hover {
   color: $dk-blue;
+  background: none;
 }
 
-.square {
-  width: 100px;
-  height: 100px;
-  background-color: black;
+.navbar .nav > li > a:focus:after,
+.navbar .nav > li > a:hover:after {
+  position: absolute;
+  content: '';
+  width:0;
+  height:0;
+  width: 0;
+  border-style: solid;
+  border-width: 6px 6px 0 6px;
+  border-color: $dk-blue transparent transparent transparent;
+  bottom: 10px;
+  left: 46%;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: $dk-blue;
+  background: none;
 }
 
 .vcenter {
@@ -44,10 +70,8 @@ header {
 }
 
 nav.navbar.navbar-default {
-  color: $lt-blue;
   background-color: #fff;
   border: none;
-  text-transform: uppercase;
 }
 
 .navbar .navbar-nav {
@@ -59,12 +83,38 @@ nav.navbar.navbar-default {
     text-align: center;
 }
 
+button.navbar-toggle {
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
 .sticky-top {
+  display: none;
   position: fixed;
   padding: 20px;
   top: 0;
   right: 6%;
-  background-color: skyblue;
   border: 2px solid navy;
   border-top: 0;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+  //
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .sticky-top {
+    display: block;
+  }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .container {
+    width: 870px;
+  }
 }
